{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 21,
  "lineage": "bf268830-5b18-b810-a113-b123bed97460",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:725237827282:security-group/sg-0c45d3d71ac7ac4da",
            "description": "dev-hackathon-instance-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound ipv4",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c45d3d71ac7ac4da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress from 10.16.40.0",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-hackathon-instance-security-group",
            "name_prefix": null,
            "owner_id": "725237827282",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-hackathon-instance-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f929ec0562ae95aa"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal-elb-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:725237827282:security-group/sg-0c8d9e39a787dccc3",
            "description": "dev-hackathon-internal-elb-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound ipv4",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8d9e39a787dccc3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress from 10.16.40.0",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-hackathon-internal-elb-security-group",
            "name_prefix": null,
            "owner_id": "725237827282",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-hackathon-internal-elb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f929ec0562ae95aa"
          }
        }
      ]
    }
  ]
}